--- a/djangos/templates/bayi_Finans.html
+++ b/djangos/templates/bayi_Finans.html
@@ -351,7 +351,7 @@
                 <div class="card card-info">
               <!--pie chart-->
                   <div class="card-header">
-                  <h3 class="card-title">Fiyatlarına Göre Ürünler</h3>
+                  <h3 class="card-title">Ürün Alış Fiyatları</h3>
 
                     <div class="card-tools">
                       <button type="button" class="btn btn-tool" data-card-widget="collapse">
