--- a/djangos/templates/bayi_MusteriSiparis.html
+++ b/djangos/templates/bayi_MusteriSiparis.html
@@ -346,7 +346,7 @@
                     <b>Tamamlanmadı</b></td>
                     {%endif%}
                     <td>
-                    <a  class="btn btn-block btn-danger" type="button" href="http://127.0.0.1:8000/admin/BAYI/customersorders/{{customerorders.id}}/change">Düzenle</a>
+                    <a  class="btn btn-block btn-danger" type="button" href="http://127.0.0.1:8000/admin/BAYI/customersorders/{{customersorders.id}}/change/">Düzenle</a>
                     </td>
                   </tr>
                   {%endfor%}
