--- a/djangos/templates/siparisler.html
+++ b/djangos/templates/siparisler.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SSB LIFT Panel | Siparişler</title>
-
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome --> 
@@ -311,7 +310,7 @@
                   </tr>
                   </thead>
                   <tbody>
-                  {%for orders in orders%}
+                  {%for orders in allorders%}
                   <tr>
                     <td>{{orders.orderName}}</td>
                     <td>{{orders.retailor.retailorName}}</td>
