--- a/djangos/templates/bayi_Index.html
+++ b/djangos/templates/bayi_Index.html
@@ -377,7 +377,7 @@
             <!-- Custom tabs (Charts with tabs)-->
             <div class="card">
               <div class="card-header">
-                 <h3 class="card-title">Hammadde Stokları Oranları</h3>
+                 <h3 class="card-title">Tahmini Teslim Süreleri</h3>
 
                   <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse">
