--- a/djangos/templates/bayi_Index.html
+++ b/djangos/templates/bayi_Index.html
@@ -42,7 +42,7 @@
       </li>
       <li class="nav-item d-none d-sm-inline-block" action="logout" method="post">
       {% csrf_token %}
-        <a href="accounts/logout" class="nav-link">Çıkış Yap</a>
+        <a href="http://127.0.0.1:8000/accounts/logout" class="nav-link">Çıkış Yap</a>
       </li>
     </ul>
 
