--- a/djangos/templates/bayi_Musteriler.html
+++ b/djangos/templates/bayi_Musteriler.html
@@ -30,7 +30,7 @@
         <a href = "http://127.0.0.1:8000" class="nav-link">Anasayfa</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Bize Ulaşın</a>
+        <a href="http://127.0.0.1:8000/accounts/logout" class="nav-link">Çıkış Yap</a>
       </li>
     </ul>
 
@@ -278,12 +278,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Hammaddeler</h1>
+            <h1>Müşteriler</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="http://127.0.0.1:8000">Anasayfa</a></li>
-              <li class="breadcrumb-item active">Hammaddeler</li>
+              <li class="breadcrumb-item active">Müşteriler</li>
             </ol>
           </div>
         </div>
