--- a/djangos/templates/bayi_Bakım.html
+++ b/djangos/templates/bayi_Bakım.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SSB LIFT Panel | Müşteri Siparişleri</title>
+  <title>SSB LIFT Panel | Bakımlar</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -280,12 +280,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Müşteri Siparişleri</h1>
+            <h1>Bakımlar</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="http://127.0.0.1:8000">Anasayfa</a></li>
-              <li class="breadcrumb-item active">Müşteri Siparişleri</li>
+              <li class="breadcrumb-item active">Bakımlar</li>
             </ol>
           </div>
         </div>
@@ -316,6 +316,8 @@
                     <th>Ürün</th>
                     <th>Bakım Açıklaması</th>
                     <th>Bakım Maliyeti</th>
+                    <th>Durum</th>
+                    <th>İşlemler</th>
                   </tr>
                   </thead>
                   <tbody>
@@ -334,7 +336,7 @@
                     <b>Tamamlanmadı</b></td>
                     {%endif%}
                     <td>
-                    <a  class="btn btn-block btn-danger" type="button" href="http://127.0.0.1:8000/admin/BAYI/customersorders/{{customerorders.id}}/change">Düzenle</a>
+                    <a  class="btn btn-block btn-danger" type="button" href="http://127.0.0.1:8000/admin/BAYI/maintenance/{{maintenance.id}}/change">Düzenle</a>
                     </td>
                   </tr>
                   {%endfor%}
@@ -345,6 +347,8 @@
                     <th>Ürün</th>
                     <th>Bakım Açıklaması</th>
                     <th>Bakım Maliyeti</th>
+                    <th>Durum</th>
+                    <th>İşlemler</th>
                   </tr>
                   </tfoot>
                 </table>
